# stt

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  main.py
app/core/: __init__.py  audio_recorder.py  clipboard_manager.py  hotkey_manager.py  orchestrator.py  paste_manager.py  text_postprocessor.py  transcription.py
app/templates/: default_templates.json  dev_dialect.json  punctuation_signs_en.json  punctuation_signs_ru.json
app/ui/: __init__.py  main_window.py  options_dialog.py  overlay_indicator.py  settings_dialog.py  tray_icon.py
app/utils/: config.py  hotkey_format.py  logger.py  settings_store.py
scripts/: create-shortcut.ps1  start-stt.ps1
tests/: test_config.py  test_hotkey_format.py  test_logger.py  test_settings_store.py  test_smoke_import.py
tests/core/: test_audio_recorder.py  test_clipboard_manager.py  test_hotkey_manager.py  test_orchestrator.py  test_text_postprocessor.py  test_transcription.py
tests/ui/: test_options_dialog.py  test_overlay_indicator.py  test_settings_dialog.py  test_tray_icon.py
